# wisun-br-gui

./: .babelrc.json  .eslintrc.json  CMakeLists.txt  Makefile  README.md  jsconfig.json  package-lock.json  package.json  webpack.config.js  wisun-soc-br-agent.1
config/: ws-soc-br-agent.conf
inc/: ws_br_agent_clnt.h  ws_br_agent_dbus.h  ws_br_agent_defs.h  ws_br_agent_log.h  ws_br_agent_msg.h  ws_br_agent_settings.h  ws_br_agent_soc_host.h  ws_br_agent_srv.h  ws_br_agent_utils.h
misc/: setup-service.sh  wisun-br-bridge-agent.1  wisun-soc-br-agent.1  wisun-soc-br-agent.service
src/: app.jsx  app.scss  index.html  index.js  main.c  ws_br_agent_clnt.c  ws_br_agent_dbus.c  ws_br_agent_log.c  ws_br_agent_msg.c  ws_br_agent_settings.c  ws_br_agent_soc_host.c  ws_br_agent_srv.c  ws_br_agent_utils.c
src/dashboard/: Dashboard.jsx  WSBRDStatus.jsx
src/dashboard/WSBRDActiveConf/: WSBRDActiveConf.jsx  WSBRDActiveConfContent.jsx
src/dashboard/WSBRDConfEditor/: WSBRDConfEditor.jsx  WSBRDConfEditorContent.jsx
src/dashboard/WSBRDGakKeys/: WSBRDGakKeys.jsx  WSBRDGakKeysContent.jsx
src/dashboard/WSBRDGtkKeys/: WSBRDGtkKeys.jsx  WSBRDGtkKeysContent.jsx
src/topology/: Topology.jsx  TopologyDrawerContent.jsx
src/utils/: CardWrapper.jsx  CenteredContent.jsx  Loading.jsx  functions.js
test/: br_soc_bot.py  dbus-get-settings.sh  dbus-get-topology.sh  dbus-monitor-routinggraph.sh  dbus-restart-br.sh  dbus-set-config.sh  dbus-start-br.sh  dbus-stop-br.sh
wisun-br-bridge-agent/: CMakeLists.txt  LICENSE.txt  README.md
wisun-br-bridge-agent/config/: ws-soc-br-agent.conf
wisun-br-bridge-agent/inc/: ws_br_agent_dbus.h  ws_br_agent_defs.h  ws_br_agent_log.h  ws_br_agent_msg.h  ws_br_agent_settings.h  ws_br_agent_srv.h  ws_br_agent_utils.h
wisun-br-bridge-agent/misc/: com.silabs.Wisun.SocBorderRouterAgent.conf  wisun-br-bridge-agent.1  wisun-br-bridge-agent.service
wisun-br-bridge-agent/src/: main.c  ws_br_agent_dbus.c  ws_br_agent_settings.c  ws_br_agent_soc_host.c  ws_br_agent_srv.c  ws_br_agent_utils.c
wisun-br-bridge-agent/test/: dbus-get-topology.sh  dbus-restart-br.sh  dbus-stop-br.sh
wisun_dashboard/: manifest.json  wisun_dashboard.css  wisun_dashboard.html  wisun_dashboard.js
wisun_topology/: manifest.json  wisun_common  wisun_topology.css  wisun_topology.html  wisun_topology.js
